--- a/projects/jtProject/index.html
+++ b/projects/jtProject/index.html
@@ -50,7 +50,9 @@
           <div class="t-mainTopContentInside">
             <div class="t-leftAndMidContentContainer">
               <div class="t-nameAndSortWrapper"><span class="t-namePage">Всё сразу</span>
-                <div class="t-topSortWrapper"><span class="t-topSortName">По дате</span><span class="t-icon">Ico</span></div>
+                <div class="t-topSortWrapper"><span class="t-topSortName">По дате</span>
+                  <div class="t-dotsHolder"><span></span></div>
+                </div>
               </div>
               <div class="t-topListCtrlWrapper t-topMiddleSection">
                 <ul class="t-topListCtrl t-topListSorting">
@@ -927,51 +929,54 @@
         </div>
       </div>
       <div class="t-fixed t-authorModal">
-        <div class="t-authorModalInfo">
-          <h1 class="t-authorModalName t-titleUltraLarge">Джон Тривольта</h1>
-          <h2 class="t-authorModalProfession t-titleLarge">Угонщик</h2>
-          <div class="t-authorModalCountWrapper"><span class="t-name">Статей</span><span class="t-authorArticlesCount">2</span></div>
-          <ul class="t-authorModalTags">
-            <li>Дизайн,</li>
-            <li>бизнес,</li>
-          </ul>
-          <div class="t-authorModalLikesHolder"><span>ico</span><span class="t-authorLikesCount">475</span></div>
-          <div class="t-authorModalAbout">
-            <h1 class="t-authorModalAboutTitle t-titleBig">О себе</h1>
-            <p class="t-authorModalDescription">Минкомсвязи отказалось от требования рассчитывать объём хранилищ данных пользователей на основании максимальной ширины канала операторов связи. Это должно снизить затраты операторов, пишет «Коммерсантъ» со ссылкой на копию письма замглавы Минкомсвязи Дмитрия Алхазова в Российский союз промышленников и предпринимателей (РСПП).</p>
-          </div>
-          <div class="t-authorModalAnotherProfiles">
-            <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Telegram</a></li>
+        <div class="t-authorModalInfoHolder">
+          <div class="t-authorModalInfo">
+            <h1 class="t-authorModalName t-titleUltraLarge">Джон Тривольта</h1>
+            <h2 class="t-authorModalProfession t-titleLarge">Угонщик</h2>
+            <div class="t-authorModalCountWrapper"><span class="t-name">Статей</span><span class="t-authorArticlesCount">2</span></div>
+            <ul class="t-authorModalTags">
+              <li>Дизайн,</li>
+              <li>бизнес,</li>
             </ul>
-          </div>
-          <div class="t-authorModalArticlesHolderWrapper">
-            <h1 class="t-authorModalAboutTitle t-titleBig">Статьи автора</h1>
-            <div class="t-authorArticlesHolder">
-              <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
-                  <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
-                  <div class="t-authorArticleCardInfo">
-                    <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
-                  </div></a></div>
-              <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
-                  <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
-                  <div class="t-authorArticleCardInfo">
-                    <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
-                  </div></a></div>
-              <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
-                  <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
-                  <div class="t-authorArticleCardInfo">
-                    <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
-                  </div></a></div>
+            <div class="t-authorModalLikesHolder"><span>ico</span><span class="t-authorLikesCount">475</span></div>
+            <div class="t-authorModalAbout">
+              <h1 class="t-authorModalAboutTitle t-titleBig">О себе</h1>
+              <p class="t-authorModalDescription">Минкомсвязи отказалось от требования рассчитывать объём хранилищ данных пользователей на основании максимальной ширины канала операторов связи. Это должно снизить затраты операторов, пишет «Коммерсантъ» со ссылкой на копию письма замглавы Минкомсвязи Дмитрия Алхазова в Российский союз промышленников и предпринимателей (РСПП).</p>
+            </div>
+            <div class="t-authorModalAnotherProfiles">
+              <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Telegram</a></li>
+              </ul>
+            </div>
+            <div class="t-authorModalArticlesHolderWrapper">
+              <h1 class="t-authorModalAboutTitle t-titleBig">Статьи автора</h1>
+              <div class="t-authorArticlesHolder">
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="t-authorModalPhoto"><img src="images/photos/John.png"/>
-          <div class="t-modalImgOverlay">
-            <div class="t-modalButtonsHolder t-hide">
-              <div class="t-modalShare"></div>
-              <div class="t-modalBack"><span>Назад</span></div>
+          <div class="t-authorModalPhoto"><img src="images/photos/John.png"/>
+            <div class="t-simpleBlock"></div>
+            <div class="t-modalImgOverlay">
+              <div class="t-modalButtonsHolder t-hide">
+                <div class="t-modalShare"></div>
+                <div class="t-modalBack"><span>Назад</span></div>
+              </div>
             </div>
           </div>
         </div>
