--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -55,22 +55,35 @@
                 </div>
               </div>
               <div class="t-topListCtrlWrapper t-topMiddleSection">
-                <ul class="t-topListCtrl t-topListSorting">
-                  <li><a href="#" class="t-topSortLinks active"></a></li>
-                  <li><a href="#" class="t-topSortLinks"></a></li>
-                  <li><a href="#" class="t-topSortLinks"></a></li>
-                  <li><a href="#" class="t-topSortLinks"></a></li>
-                  <li><a href="#" class="t-topSortLinks"></a></li>
-                  <li><a href="#" class="t-topSortLinks"></a></li>
-                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Бизнес</a></li>
-                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Дизайн</a></li>
-                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Шняга</a></li>
-                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Еще</a></li>
-                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Дичь</a></li>
-                  <li class="t-hiddenLink"><a href="#" class="t-topSortLinks">Дичь2</a></li>
-                </ul>
+                <div class="t-sortMenuHolder">
+                  <ul class="t-topListCtrl t-topListSorting">
+                    <li><a href="#" class="t-topSortLinks active"></a></li>
+                    <li><a href="#" class="t-topSortLinks"></a></li>
+                    <li><a href="#" class="t-topSortLinks"></a></li>
+                    <li><a href="#" class="t-topSortLinks"></a></li>
+                    <li><a href="#" class="t-topSortLinks"></a></li>
+                    <li><a href="#" class="t-topSortLinks"></a></li>
+                  </ul>
+                </div>
                 <div class="t-dotsHolder t-callHiddenSortingMenu"><span></span>
-                  <ul class="t-smallModalMenu t-sortModalContainer"></ul>
+                  <ul class="t-smallModalMenu t-sortModalContainer">
+                    <li>
+                      <ul class="js-menu-more">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                      </ul>
+                    </li>
+                    <li>Бизнес</li>
+                    <li>Дизайн</li>
+                    <li>Шняга</li>
+                    <li>Еще</li>
+                    <li>Дичь</li>
+                    <li>Дичь2</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -706,13 +719,48 @@
                     <div class="t-authorArticleCardInfo">
                       <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
                     </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
               </div>
             </div>
           </div>
           <div class="t-authorModalPhoto"><img src="images/photos/John.png"/>
             <div class="t-simpleBlock"></div>
             <div class="t-modalImgOverlay">
-              <div class="t-modalButtonsHolder t-hide">
+              <div class="t-modalButtonsHolder t-hide t-profileModalButtonsHolder">
                 <div class="t-modalShare"></div>
                 <div class="t-modalBack"><span>Назад</span></div>
               </div>
