--- a/projects/jtProject/_layout.html
+++ b/projects/jtProject/_layout.html
@@ -13,7 +13,7 @@
   <body>
     <div class="t-mainWrapper">
       <div class="t-hiddenLogoWrapper">
-        <div class="t-burger"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
+        <div class="t-burger t-burgerMob"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
           <div class="t-logo"></div></a>
         <div class="t-pageNameHolder"><span class="t-pageHiddenName"></span></div>
       </div>
@@ -140,17 +140,78 @@
                     <div class="t-authorArticleCardInfo">
                       <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
                     </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
+                <div class="t-authorModalArticleCard"><a href="#" class="t-articleLink">
+                    <div class="t-authorArticleCardImg"><img src="/images/png/Frame.png"/></div>
+                    <div class="t-authorArticleCardInfo">
+                      <h3 class="t-authorArticleCardTitle">Заголовок статьи не слишком вмещающийся во  фреймворке</h3><span class="t-authorArticleCardCtegory">Экспертное мнение</span><span class="t-authorArticleCardDate">14 апреля 2218</span>
+                    </div></a></div>
               </div>
             </div>
           </div>
           <div class="t-authorModalPhoto"><img src="images/photos/John.png"/>
             <div class="t-simpleBlock"></div>
             <div class="t-modalImgOverlay">
-              <div class="t-modalButtonsHolder t-hide">
+              <div class="t-modalButtonsHolder t-hide t-profileModalButtonsHolder">
                 <div class="t-modalShare"></div>
                 <div class="t-modalBack"><span>Назад</span></div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="t-mobileMenu">
+        <div class="t-mobileInsideHolder">
+          <section class="t-logoSection"><a href="/" class="t-logoWrapper">
+              <div class="t-logo"></div></a></section>
+          <div class="t-mobileMenuWrapper">
+            <nav>
+              <ul class="t-menuList">
+                <li class="t-menuListItem"><a href="/">Всё сразу</a></li>
+                <li class="t-menuListItem"><a href="#">Статьи</a></li>
+                <li class="t-menuListItem"><a href="#">Подборки</a></li>
+                <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
+                <li class="t-menuListItem"><a href="#">Переводы</a></li>
+                <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
+                <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
+                <li class="t-menuListItem"><a href="#">Туториалы</a></li>
+                <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
+                <li class="t-menuListItem"><a href="#">Библиотека</a></li>
+                <li class="t-menuListItem"><a href="#">События</a></li>
+                <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
+                <li class="t-menuListItem"><a href="#">Информация</a></li>
+              </ul>
+            </nav>
+            <div class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br/><a href="http://tdsgn.ru/">Создано в Студии Т</a></div>
           </div>
         </div>
       </div>
