--- a/projects/jtProject/aside.html
+++ b/projects/jtProject/aside.html
@@ -1,7 +1,7 @@
 
 <aside>
   <div class="t-asideInsideHolder">
-    <section class="t-logoSection">
+    <section class="t-logoSection t-logoSectionMain">
       <div class="t-burger t-mainBurger"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
         <div class="t-logo"></div></a>
     </section>
