--- a/projects/jtProject/index.html
+++ b/projects/jtProject/index.html
@@ -13,13 +13,13 @@
   <body>
     <div class="t-mainWrapper">
       <div class="t-hiddenLogoWrapper">
-        <div class="t-burger"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
+        <div class="t-burger t-burgerMob"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
           <div class="t-logo"></div></a>
         <div class="t-pageNameHolder"><span class="t-pageHiddenName"></span></div>
       </div>
       <aside>
         <div class="t-asideInsideHolder">
-          <section class="t-logoSection">
+          <section class="t-logoSection t-logoSectionMain">
             <div class="t-burger t-mainBurger"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
               <div class="t-logo"></div></a>
           </section>
@@ -46,6 +46,7 @@
         </div>
       </aside>
       <main class="t-mainMain">
+        <section class="t-mobHeader"></section>
         <section class="t-mainTopContent">
           <div class="t-mainTopContentInside">
             <div class="t-leftAndMidContentContainer">
@@ -1026,6 +1027,32 @@
                 <div class="t-modalBack"><span>Назад</span></div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="t-mobileMenu">
+        <div class="t-mobileInsideHolder">
+          <section class="t-logoSection"><a href="/" class="t-logoWrapper">
+              <div class="t-logo"></div></a></section>
+          <div class="t-mobileMenuWrapper">
+            <nav>
+              <ul class="t-menuList">
+                <li class="t-menuListItem"><a href="/">Всё сразу</a></li>
+                <li class="t-menuListItem"><a href="#">Статьи</a></li>
+                <li class="t-menuListItem"><a href="#">Подборки</a></li>
+                <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
+                <li class="t-menuListItem"><a href="#">Переводы</a></li>
+                <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
+                <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
+                <li class="t-menuListItem"><a href="#">Туториалы</a></li>
+                <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
+                <li class="t-menuListItem"><a href="#">Библиотека</a></li>
+                <li class="t-menuListItem"><a href="#">События</a></li>
+                <li class="t-menuListItem"><a href="/authors.html">Авторы</a></li>
+                <li class="t-menuListItem"><a href="#">Информация</a></li>
+              </ul>
+            </nav>
+            <div class="t-copyWrapper"><span>&copy; ЖТ 2018</span><br/><a href="http://tdsgn.ru/">Создано в Студии Т</a></div>
           </div>
         </div>
       </div>
